Replace Sun Base64 encoder/decoder
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat/trunk@4526 b0d8beef-cb45-0410-a8e4-c0d495c3b779